# feast-credit-score-local-tutorial

./: .gitignore  Dockerfile  README.md  app.py  app_with_transformation_server.py  credit_model.py  demo_walkthrough.ipynb  pyproject.toml  requirements.txt  run.py  start_python_feature_transform_server.py  streamlit_app.py
feature_repo/: FEATURE_STORE_GUIDE.md  create_ui_visible_datasets.py  feature_store.yaml  features.py  transformations.py  validations.py
